<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.activity.LogInActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inria"
        android:text="Log In"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:background="@drawable/formchanges"
            android:fontFamily="@font/inria"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/formchanges"
        android:fontFamily="@font/inria"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="163dp"
        android:layout_height="161dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/inria"
        android:text="LEARNMATES"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inria"
        android:text="Learn Together, Grow Together"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="86dp"
        android:text="Forgot Password?"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="352dp"
        android:layout_marginBottom="666dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_circle_left_24"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>