<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.activity.SignupActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inria"
        android:text="SIGN UP"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsCheckbox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/termsCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:background="@drawable/formchanges"
            android:fontFamily="@font/inria"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_below="@id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/formchanges"
        android:fontFamily="@font/inria"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="131dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/termsCheckbox"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="8dp"
        android:text="I agree with the terms and conditions."
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_below="@id/editTextFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/formchanges"
        android:fontFamily="@font/inria"
        android:hint="Username"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_below="@id/subTitleText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/formchanges"
        android:fontFamily="@font/inria"
        android:hint="Full Name"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitleText" />

    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/inria"
        android:text="Learn Together, Grow Together"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/inria"
        android:text="LEARNMATES"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/alreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="16dp"
        android:text="Already have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="352dp"
        android:layout_marginBottom="666dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_circle_left_24"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>